--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,16 @@
-image: cuda11.3-mpi-hdf5
+image: cuda11.0-mpi-hdf5
 
 # Is performed before the scripts in the stages step
 before_script:
     - export OMP_PROC_BIND=close
     - export OMP_PLACES=cores
     - export OMP_NUM_THREADS=1
+    - export CMAKE_VERSION=3.13.5
     - export CTEST_OUTPUT_ON_FAILURE=1
     - export MACHINE_CFG=${PWD}/cmake/machinecfg/CI.cmake
     - export J=$(( $(nproc --all) / 4  + 1 )) && echo Using ${J} cores during build
+    - wget -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:4}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz | tar -xz
+    - export PATH=${PWD}/cmake-${CMAKE_VERSION}-Linux-x86_64/bin:$PATH
 
 cache:
   paths:
@@ -92,7 +95,6 @@ parthenon-cuda-short:
     - cd build-cuda-perf-mpi
     - cmake -DCMAKE_BUILD_TYPE=Release
       -DMACHINE_VARIANT=cuda-mpi
-      -DPARTHENON_ENABLE_INIT_PACKING=ON
       ../
     - make -j${J} advection-example
     - export OMPI_MCA_mpi_common_cuda_event_max=1000
@@ -102,7 +104,7 @@ parthenon-cuda-short:
     # during loadbalance and refinement, but not for a static grid.
     # Also delaying start as there are explicit copies during initialization, e.g.,
     # when the Variable caches are created.
-    - nsys profile --delay=5 --duration=5 --stats=true -s none -t cuda example/advection/advection-example
+    - nsys profile --delay=5 --duration=5 --stats=true example/advection/advection-example
       -i ../tst/regression/test_suites/advection_performance/parthinput.advection_performance
       parthenon/mesh/nx1=128 parthenon/mesh/nx2=128  parthenon/mesh/nx3=128
       parthenon/meshblock/nx1=64 parthenon/meshblock/nx2=64 parthenon/meshblock/nx3=64
@@ -125,7 +127,6 @@ parthenon-cpu-short:
     - cd build-perf-mpi
     - cmake -DCMAKE_BUILD_TYPE=Release
       -DMACHINE_VARIANT=mpi
-      -DPARTHENON_ENABLE_INIT_PACKING=ON
       ../
     - make -j${J} advection-example
     - ctest -R regression_mpi_test:output_hdf5
