--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,7 +208,10 @@ endif()
 
 # We want Kokkos to be built with C++14, since that's what we're using in
 # Parthenon.
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# ensure correct flag is used as deprecated c++1z is not supported by nvcc
+set(CMAKE_CXX17_STANDARD_COMPILE_OPTION "-std=c++17")
 if (NOT TARGET Kokkos::kokkos)
   if (PARTHENON_IMPORT_KOKKOS)
     find_package(Kokkos 3)
